[package]
name = "pixel-land-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
incremental = true
lto = true
codegen-units = 1

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "pixel-land-backend"

[dependencies]
tokio = { version = "1.17.0", features = ["macros", "rt-multi-thread"] }
actix-web = "4.0.0-rc.3"
parking_lot = "0.12.0"
serde_json = "1.0.79"
serde = { version = "1.0.136", features = ["derive"] }
